<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame">

    <TextView
        android:id="@+id/barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/example_barcode"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/name_goods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcode"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:text="@string/example_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/example_id"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>