<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame">

    <TextView
        android:id="@+id/date_restock"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/example_date"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_restock"
        android:padding="8dp"
        android:text="@string/example_user" />

    <TextView
        android:id="@+id/restock_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:text="@string/example_id"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>