<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame">

    <ImageView
        android:id="@+id/tv_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:background="#fff"
        android:contentDescription="image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_toEndOf="@+id/tv_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_barcode"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_name"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/price_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_price"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/example_id"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>