<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:titleTextColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <com.budiyev.android.codescanner.CodeScannerView
                android:id="@+id/scanner_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp" />

            <LinearLayout
                android:id="@+id/content_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/barcode_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/barcode"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/button_barcode"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

            </LinearLayout>
        </RelativeLayout>

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TableRow>

                <TextView android:text="@string/app_name" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>